--- a/working_with_dbs/package.json
+++ b/working_with_dbs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^4.1.2",
-    "mongoose": "^6.0.6"
+    "mongoose": "^6.0.6",
+    "validator": "^13.6.0"
   }
 }
