--- a/customer_app/package.json
+++ b/customer_app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "hbs": "^4.1.2"
+    "hbs": "^4.1.2",
+    "mongodb": "^4.1.2"
   }
 }
